SERVER-56479 Server logging of BSON containing BinData does not roundtrip